--- a/themes/ink/layouts/partials/subscribe.html
+++ b/themes/ink/layouts/partials/subscribe.html
@@ -1,9 +1,11 @@
 <script src="https://f.convertkit.com/ckjs/ck.5.js"></script>
+
 <form 
     action="https://app.convertkit.com/forms/1647478/subscriptions"
      method="post"
 >
     <div style="max-width: 480px;margin: 0 auto">
+        <h2> Subscribe to get weekly updates</h2>
         <ul  data-element="errors" data-group="alert"></ul>
         <div data-element="fields" data-stacked="false">
             <div>
@@ -32,16 +34,16 @@
 </form>
 <style>
 input{
-    border: 1px solid #333;
+    border: 1px solid #999;
     color: black;
     border-radius: 0;
     padding: 10px;
     margin-bottom: 10px;
-    width: 100%;
+    width: 80%;
 }
 input:focus{
 border-radius: 0;
-border: 1px solid #333;
+border: 1px solid #666;
 outline: none;
 }
 
@@ -52,9 +54,9 @@ form{
     background-color: #3700ff;
     color: white;
     border: none;
-    padding: 5px 30px;
-    border-radius: 5px;
-    width: 100%;
+    padding: 8px 30px;
+    border-radius: 1px;
+    width: 85%;
 
 }
 </style>
