--- a/themes/ink/layouts/index.html
+++ b/themes/ink/layouts/index.html
@@ -19,6 +19,7 @@
 		</div>
 	</div>
 	<hr>
+	<script data-goatcounter="https://advik.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 	{{ partial "subscribe.html"}}
 	{{ partial "footer.html" . }}
 </body>
