--- a/themes/ink/layouts/_default/single.html
+++ b/themes/ink/layouts/_default/single.html
@@ -59,5 +59,16 @@
 	{{ partial "subscribe.html"}}
 
 	{{ partial "footer.html" . }}
+	<script>
+		if (window.netlifyIdentity) {
+		  window.netlifyIdentity.on("init", user => {
+			if (!user) {
+			  window.netlifyIdentity.on("login", () => {
+				document.location.href = "/admin/";
+			  });
+			}
+		  });
+		}
+	  </script>
 </body>
 </html>
