--- a/themes/ink/layouts/partials/subscribe.html
+++ b/themes/ink/layouts/partials/subscribe.html
@@ -36,15 +36,18 @@
 input{
     border: 1px solid #999;
     color: black;
-    border-radius: 0;
+    border-radius: 5px;
     padding: 10px;
     margin-bottom: 10px;
     width: 80%;
+    box-shadow: none;
 }
 input:focus{
 border-radius: 0;
 border: 1px solid #666;
 outline: none;
+box-shadow: none;
+border-radius: 5px;
 }
 
 form{
@@ -54,9 +57,9 @@ form{
     background-color: #3700ff;
     color: white;
     border: none;
-    padding: 8px 30px;
-    border-radius: 1px;
-    width: 85%;
+    padding: 10px;
+    border-radius: 5px;
+    width: 84%;
 
 }
 </style>
