--- a/themes/ink/layouts/_default/single.html
+++ b/themes/ink/layouts/_default/single.html
@@ -56,7 +56,40 @@
 		</div>
 	</div>
 	<hr>
-	{{ partial "subscribe.html"}}
+	{{partial "subscribe.html"}}
+<hr>
+
+
+
+
+	<!-- COMMENTS -->
+	<div class="comments">
+
+		<h2>Comments</h2>
+		{{ $comments_provider := trim (site.Params.comments.provider | lower) " " }}
+		<div id="cusdis_thread" data-host="https://cusdis.com"
+				data-app-id="671e920c-b75c-433e-a1d6-052bb50496f2"
+				data-page-id="{{.UniqueID}}" 
+				data-page-url="{{ .Permalink }}"
+				data-page-title="{{ .Title }}">
+		</div>
+		<script async defer src="https://cusdis.com/js/cusdis.es.js"></script>
+		
+		</div>
+		
+		<style>
+			.comments{
+				max-width: 760px;
+				margin: 10px auto;
+			}
+			
+		</style>
+
+<!-- COMMENTS ENDS -->
+
+
+
+
 
 	{{ partial "footer.html" . }}
 	<script>
